Add pagination info to public API
